--- a/index.css
+++ b/index.css
@@ -11,19 +11,22 @@ header {
     margin-top: 30px;
     border-bottom: 1px solid seashell;
     position: sticky;
-    top: 20px;
+    top: 0.1px;
+    background-color: black;
+    z_index: 1;
 }
 
 #logo {
     margin-left: 10px;
-    
+    position: relative; 
+    top: 10px;
 }
 .nav li {
     display: inline;
     margin: 0 15px;
     text-decoration: underline;
    position: relative; 
-   left: 1500px;
+   left: 1025px;
    bottom: 92px;
    
 }
@@ -102,8 +105,11 @@ top: 70px;
 .contact {
     height: 200px;
     text-align: center;
-  
 }
 div h3, p {
     line-height:2;
+}
+footer h5 {
+    text-align: left;
+    margin-left: 10px;
 }
